objects/zkmulti__PrintHistory__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PrintJobId__c</fullName>
        <label>Print Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PrinterId__c</fullName>
        <label>Printer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PrinterName__c</fullName>
        <label>Printer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipLabel>Print Histories</relationshipLabel>
        <relationshipName>Print_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Print History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>zkmulti__Shipment__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PH-{00000}</displayFormat>
        <label>Print History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Print History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>